<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    android:label="@string/title_about_trivia"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="se.stylianosgakis.android_trivia.TitleFragment"
        android:label="@string/game_title"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="se.stylianosgakis.android_trivia.GameFragment"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_gameOverFragment"
            app:destination="@id/gameOverFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            app:popUpTo="@id/titleFragment" />
        <action
            android:id="@+id/action_gameFragment_to_gameWonFragment"
            app:destination="@id/gameWonFragment"
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameWonFragment"
        android:name="se.stylianosgakis.android_trivia.GameWonFragment"
        android:label="@string/game_won"
        tools:layout="@layout/fragment_game_won">
        <action
            android:id="@+id/action_gameWonFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/slide_in_from_left"
            app:exitAnim="@anim/slide_out_to_right"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            app:popUpTo="@id/titleFragment" />
        <argument
            android:name="numQuestions"
            app:argType="integer" />
        <argument
            android:name="numCorrect"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/gameOverFragment"
        android:name="se.stylianosgakis.android_trivia.GameOverFragment"
        android:label="@string/game_over"
        tools:layout="@layout/fragment_game_over">
        <action
            android:id="@+id/action_gameOverFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:enterAnim="@anim/slide_in_from_left"
            app:exitAnim="@anim/slide_out_to_right"
            app:popEnterAnim="@anim/slide_in_from_left"
            app:popExitAnim="@anim/slide_out_to_right"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="se.stylianosgakis.android_trivia.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="se.stylianosgakis.android_trivia.RulesFragment"
        android:label="@string/rules"
        tools:layout="@layout/fragment_rules" />
</navigation>